syntax = "proto3";

package adminpb;

option go_package = "./";

service AdminService {
    rpc AdminLogin(AdminRequest) returns (AdminResponse);

    rpc FindUserByEmailFn(UserRequest) returns (User);
    rpc FindUserByIDFn(AUserID) returns (User);
    rpc FindAllUsersFn(AdminNoParam) returns (UserList);
    rpc EditUserFn(UserModel) returns (AdminResponse);
    rpc DeleteUserFn(AUserID) returns (AdminResponse);

    rpc CreateDoctor(DoctorModel) returns(AdminResponse) ;
    rpc UserFetchDoctorByID(DoctorID) returns(DoctorModel);
    rpc UserFetchDoctorByName(DoctorName) returns (DoctorModel);
    rpc UserFetchAllDoctors(AdminNoParam) returns (DoctorList);
}

message AdminNoParam{}

message User {
    string firstname = 1;
    string lastname = 2;
    string username = 3;
    string dob = 4;
    string gender = 5;
    string email = 6;
    string phone = 7;
}

message UserList {
    repeated User users = 1;
}

message AdminResponse {
    string status = 1;
    string error = 2;
    string message = 3;
}

message AdminRequest {
    string username = 1;
    string password = 2;
    string role = 3;
}

message UserRequest {
    string email = 1;
}

message AUserID {
    uint32 id = 1;
}

message UserModel {
    string firstname = 1;
    string lastname = 2;
    string dob = 3;
    string gender = 4;
    string email = 5;
    string phone = 6;
    string password = 7;
}



message DoctorModel {
    string doctor_name = 1;
    uint64 age = 2;
    string speciality = 3;
    string gender = 4;
    string email = 5;
}


message DoctorID {
    uint32 id = 1;
}

message DoctorName {
    string name = 1;
}

message DoctorList {
    repeated DoctorModel doctors = 1;
}